--- a/sass/layout/_comments.sass
+++ b/sass/layout/_comments.sass
@@ -32,10 +32,13 @@
       font-size: ms(0)
 
     // Author
-    cite a
-      @extend %base-link
-      &[href="http://blogs.wefrag.com/Anahkiasen"]
-        color: $orange
+    cite
+      position: relative
+      z-index: 5
+      a
+        color: $nodeGreen
+        &[href="http://blogs.wefrag.com/Anahkiasen"]
+          color: $orange
     .commentmetadata
       border-bottom: 1px solid $base1
       bottom: 30px
@@ -44,6 +47,7 @@
       position: relative
       text-align: right
       text-transform: uppercase
+      z-index: 0
       a
         color: $base01
 
